[package]
name = "jscan-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.jscan]
path = ".."

[[bin]]
name = "fuzz_valid"
path = "fuzz_targets/fuzz_valid.rs"
doc = false

[workspace]
members = ["."]
